Add pagination on the bottom of the page

--- a/writings-dev-clone/index.html
+++ b/writings-dev-clone/index.html
@@ -123,5 +123,10 @@
       </div>
     </div>
   </div>
+  <div class="pagination">
+    <p>Previous</p>
+    <p>1 <span>2</span> 3 4 5</p>
+    <p>Next</p>
+  </div>
 </body>
 </html>
