--- a/timezone-clock/index.html
+++ b/timezone-clock/index.html
@@ -5,8 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Timezone Clock</title>
   <link rel="stylesheet" href="assets/css/style.css">
+  <script src="dist/main.js" defer></script>
 </head>
 <body>
-
+  <div class="main">
+    <p class="timezone">Europe / London</p>
+    <h1>06:35:00</h1>
+    <p class="date">Monday, 1 May, 2023</p>
+  </div>
 </body>
 </html>
