--- a/timezone-clock/index.html
+++ b/timezone-clock/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
   <div class="main">
-    <p class="timezone">Europe / London</p>
-    <h1>06:35:00</h1>
-    <p class="date">Monday, 1 May, 2023</p>
+    <p class="timezone" id="timezone">Europe / London</p>
+    <h1 id="time">06:35:00</h1>
+    <p class="date" id="date">Monday, 1 May, 2023</p>
   </div>
 </body>
 </html>
