--- a/qr-code-component/index.html
+++ b/qr-code-component/index.html
@@ -25,6 +25,8 @@
   <div class="container">
     <div class="qr-card">
       <img src="images/image-qr-code.png" alt="QR Code" class="qr-code">
+      <p class="qr-card-header">Improve your front-end skills by building projects</p>
+      <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </div>
   </div>
 
